eks/kubernates/Deployment/example-5/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: example-5
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: myapp
